# pdc-graph

./: .gitignore  .gitlab-ci.yml  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md  builder.ui  cnt_hello.c  hello_main.cc  meson.build
include/: graph.h  gui.h  gui_tree.h  helloworld.h  meson.build  node.h
src/: CMakeLists.txt  graph.cc  gui.cc  gui_tree.cc  helloworld.cc  makefile  meson.build
test/: CMakeLists.txt  graph_test.cc  hello_main.cc  main_test.cc  meson.build
test/include/: edge_test.h  graph_test.h  graph_test_suite.h  meson.build  test_edge.h  test_graph.h  test_node.h  test_suite_graph.h
test/src/: CMakeLists.txt  edge_test.cc  graph_test.cc  meson.build  node_test.cc  test_edge.cc  test_graph.cc  test_node.cc
